# ChatQBit

./: .dockerignore  .env.sample  .gitignore  2025-10-16-caveat-the-messages-below-were-generated-by-the-u.txt  CLAUDE.md  Cargo.toml  Dockerfile  LOGGING.md  README.md  START_WITH_TUNNEL.md  TUNNEL.md  bacon.toml  compose.yml  test_tunnel.sh
crates/chatqbit/: Cargo.toml
crates/chatqbit/src/: main.rs
crates/fileserver/: Cargo.toml
crates/fileserver/src/: lib.rs  server.rs  state.rs  token.rs  tunnel.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: callbacks.rs  commands.rs  constants.rs  error.rs  handlers.rs  keyboards.rs  lib.rs  rate_limit.rs  telegram.rs  types.rs  utils.rs
crates/telegram/src/commands/: basic.rs  config.rs  control.rs  mod.rs  stream.rs  torrent.rs
crates/torrent/: Cargo.toml
crates/torrent/src/: lib.rs  torrent.rs  utils.rs
examples/: test_russh_tunnel.rs
src/: main.rs  torrent.rs
