[workspace]
members = [
    "crates/chatqbit",
    "crates/telegram",
    "crates/torrent"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rakibul Yeasin<ryeasin03@gmail.com>"]
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
