[workspace]
members = [
    "crates/chatqbit", "crates/fileserver",
    "crates/telegram",
    "crates/torrent"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rakibul Yeasin<ryeasin03@gmail.com>"]
license = "MIT"

[workspace.dependencies]
dotenv = "0.15"
teloxide = { version = "0.12", features = ["macros"] }
dptree = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
qbit-rs = "0.4.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
