[package]
name = "chatqbit"
version = "0.1.0"
edition = "2021"

[dependencies]
torrent = { path = "../torrent" }
telegram = { path = "../telegram" }
dotenv = "0.15"
teloxide = { version = "0.12", features = ["macros"] }
dptree = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
