[package]
name = "chatqbit"
version = "0.1.0"
edition = "2021"

[dependencies]
torrent = { path = "../torrent" }
telegram = { path = "../telegram" }
fileserver = { path = "../fileserver" }
dotenv = { workspace = true }
tokio = { workspace = true }
teloxide = { workspace = true }
dptree = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
