[package]
name = "telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
torrent = { path = "../torrent" }
fileserver = { path = "../fileserver" }
teloxide = { version = "0.12", features = ["macros"] }
tracing = { workspace = true }
qbit-rs = { workspace = true }
sha1 = "0.10"
chrono = "0.4"
urlencoding = "2.1"
